--- a/gallery.html
+++ b/gallery.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Tera web</title>                  <!--Change for your own title-->
+    <title>Lekgolo Web</title>                  <!--Change for your own title-->
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/typography.css">
     <link rel="stylesheet" href="css/lightbox.css">
@@ -16,7 +16,7 @@
     <header>
       <nav class="content">
         <h1>
-          <a href="index.html">Tera Art Gallery</a> <!--Change your own title for the banner-->
+          <a href="index.html">Lekgolo Art Gallery</a> <!--Change your own title for the banner-->
         </h1>
         <ul>
           <li>
@@ -27,30 +27,36 @@
     </header>
 
     <article id="page" class="content">
-      <h2>My Gallery</h2>                <!--Change for your own title-->
+      <h2>Lekgolo Gallery</h2>                <!--Change for your own title-->
       <p>
-      Write your texting here              <!--Write your texting-->
+      My name is Olin, I live in San Francisco
+      My favorite food is pizza 
+      My favorite game is Halo
+      My favorite movie is Star Wars             <!--Write your texting-->
       </p>
       
       <ul class="gallery">
         <li>
-          <a href= http://snap.berkeley.edu/snapsource/snap.html#present:Username=terafree&ProjectName=scrolling%20background> <!--Add your own link-->
-            <img src="img/game1.jpg">                 <!--Add your own small jpg-->
+   These are some cool games huh?           <!--Write your texting-->
+          <a href=http://snap.berkeley.edu/snapsource/snap.html#present:Username=olinkahney&ProjectName=tron%20pong<!--Add your own link-->
+            <img src="img/banner01.jpg">                 <!--Add your own small jpg-->
           </a>
         </li>
         <li>
-          <a href="img/photos/photo-2-800x800.jpg"> <!--Add your own link-->
-            <img src="img/photo-2-200x200.jpg"> <!--Add your own small jpg-->
+          <a href=http://snap.berkeley.edu/snapsource/snap.html#present:Username=olinkahney&ProjectName=courage%20joke> <!--Add your own link-->
+            <img src="img/Courage.a.jpg"> <!--Add your own small jpg-->
           </a>
         </li>
         <li>
-          <a href="img/photos/photo-3-800x800.jpg"> <!--Add your own link-->
-            <img src="img/photo-3-200x200.jpg"> <!--Add your own small jpg-->
+          <a href=http://snap.berkeley.edu/snapsource/snap.html#present:Username=olinkahney&ProjectName=HALO%20Ball> <!--Add your own link-->
+            <img src="img/halocombatevolved530.jpg"> <!--Add your own small jpg-->
           </a>
         </li>
         <li>
-          <a href="img/photos/photo-4-800x800.jpg"> <!--Add your own link-->
-            <img src="img/photo-4-200x200.jpg"> <!--Add your own small jpg-->
+          <a href=http://snap.berkeley.edu/snapsource/snap.html#present:Username=olinkahney&ProjectName=comedy%20sketch%20part%202
+
+> <!--Add your own link-->
+            <img src="img/comedy.jpg"> <!--Add your own small jpg-->
           </a>
         </li>
         
@@ -60,7 +66,7 @@
      <p> </p>
     <footer>
       <div class="content">
-        <p>Reflections of your work</p>      <!--Reflections about your games-->
+        <p>My favorite game was the game of pong since it turned out really fun. My favorite activty was code combat since it was really fun and I learned about coding. My favorite coding experience was making the games because there is magic in them. </p>      <!--Reflections about your games-->
       </div>
     </footer>
   </body>
